--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "flashcard1",
+  "name": "flashcard-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
+    "react-share-on-social": "^1.0.12",
+    "react-to-print": "^2.14.12",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +41,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "formik": "^2.2.9",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "tailwindcss": "^3.3.1"
   }
 }
