--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-share-on-social": "^1.0.12",
     "react-to-print": "^2.14.12",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
