--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flashcard-generator",
   "version": "0.1.0",
+  "homepage": "https://lokeshkavisth.github.io/Flashcard-Generator-Almabetter",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,8 @@
     "yup": "^1.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
