--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flashcard-generator",
   "version": "0.1.0",
-  "homepage": "https://lokeshkavisth.github.io/Flashcard-Generator-Almabetter",
+  "homepage": "https://lokeshkavisth.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
