--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-share": "^4.4.1",
+    "react-scripts": "^5.0.1",
+    "react-share": "^5.1.0",
     "react-share-on-social": "^1.0.12",
     "react-to-print": "^2.14.12",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "redux-mock-store": "^1.5.4",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^3.5.2",
     "yup": "^1.2.0"
   },
   "scripts": {
@@ -43,9 +43,8 @@
   },
   "devDependencies": {
     "formik": "^2.2.9",
-    "gh-pages": "^5.0.0",
-    "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1"
   }
